Landing page has some style

--- a/js/app/modules/home/templates/home.html
+++ b/js/app/modules/home/templates/home.html
@@ -1,3 +1,7 @@
-<div class="container">
-  <h1>HELLO</h1>
+<div class="jumbotron" id="home_page">
+  <div class="container" id="welcome">
+  <h1>DJ's Angular Restaurant!</h1>
+    <p>...</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Welcome!</a></p>
+  </div>
 </div>
