--- a/js/app/modules/main/templates/footer.html
+++ b/js/app/modules/main/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-left">
       <div class="logo-copyright">
         <div class="footer-logo"><a href="http://www.pb.com"></a></div>
-        <div class="copyright">&copy; {{footer.date}} Pitney Bowes Inc.</div>
+        <div class="copyright">&copy; {{footer.date.year}} Michael Djurdjevic</div>
       </div>
     </div>
 
