added info to landing page

--- a/js/app/modules/home/templates/home.html
+++ b/js/app/modules/home/templates/home.html
@@ -2,6 +2,21 @@
   <div class="container" id="welcome">
   <h1>DJ's Angular Restaurant!</h1>
     <p>...</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Welcome!</a></p>
-  </div>
+    <div>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Menu</a></p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Directions</a></p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Contact</a></p>
+    </div>
+
+    <div class="home-info">
+      <p>57 Hemlock St.</p>
+      <p>Valatie, NY, 12184</p>
+      <p>518-610-8190</p>
+    </div>
+
+    <div class="home-info">
+      <p>Monday, Tuesday: Closed</p>
+      <p>Wednesday-Saturday: 5pm-11pm</p>
+      <p>Sunday: 5pm-9pm</p>
+   </div>
 </div>
