--- a/js/app/modules/home/assets/_home.css
+++ b/js/app/modules/home/assets/_home.css
@@ -10,10 +10,22 @@
 #welcome {
   float: right;
   padding-right: 2em;
+  padding-top: 2em;
   width: 30%;
   height: 100%;
   background-color: #800000;
   border-left: 5px solid black;
-
   color: white;
+  font-family: Garamond,Baskerville,Baskerville Old Face,Hoefler Text,Times New Roman,serif;
+}
+
+div.home-info {
+  border-top: 1px solid white;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  font-size: 1em;
+}
+
+div.home-info p {
+  margin-bottom: 0;
 }
