--- a/js/app/modules/home/templates/home.html
+++ b/js/app/modules/home/templates/home.html
@@ -1,9 +1,9 @@
 <div class="jumbotron" id="home_page">
   <div class="container" id="welcome">
-  <h1>DJ's Angular Restaurant!</h1>
+  <h1 id="restaurant_name">DJ's Angular Restaurant!</h1>
     <p>...</p>
-    <div>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Menu</a></p>
+    <div id="main-menu">
+      <p><a class="btn btn-primary btn-lg" href="/#/menu" role="button">Menu</a></p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Directions</a></p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Contact</a></p>
     </div>
