--- a/js/app/modules/home/assets/_home.css
+++ b/js/app/modules/home/assets/_home.css
@@ -1,7 +1,7 @@
 #home_page {
-  background-image: url("http://iloverustico.com/wp-content/uploads/2014/05/pizza-food-image.jpg");
+  background-image: url("https://www.scandichotels.com/imagevault/publishedmedia/qn6infvg30381stkubky/scandic-sundsvall-city-restaurant-verket-10.jpg");
   width: 100%;
-  height: 840px;
+  height: 880px;
   background-repeat: no-repeat;
   padding-top: 0;
   padding-bottom: 0;
@@ -9,7 +9,7 @@
 
 h1#restaurant_name {
   font-family: 'Pacifico', cursive;
-  color: #F6E8C5
+  color: #4385F5
 }
 
 #welcome {
@@ -18,7 +18,7 @@ h1#restaurant_name {
   padding-top: 2em;
   width: 30%;
   height: 100%;
-  background-color: #800000;
+  background-color: #333333;
   border-left: 5px solid black;
   color: white;
 }
