--- a/js/app/modules/menu/templates/menu.html
+++ b/js/app/modules/menu/templates/menu.html
@@ -1,3 +1,36 @@
-<div>
-  <h1>HEY</h1>
+<div class="container" id="menu_wrapper">
+
+  <div class="row">
+
+    <div class="col-sm-6 col-md-6" class="main_menu_container">
+      <div class="thumbnail">
+        <img src="https://www.99restaurants.com/media/1837/ninety-nine-restaurant-smokehouse-burger-640.jpg" alt="...">
+        <div class="caption">
+          <h3 class="Railway">Lunch Menu</h3>
+          <hr />
+          <p> Check out what's for lunch today at DJ's! From juicy burgers to light, summer-perfect salads, we've got whatever you're craving.
+            Our lunch menu is currently served Friday through Sunday, from 11am through 6pm. We will make accommodations for food allergies with prior notice.
+            Feel free to dine in, or create an order for takeout!</p>
+          <hr />
+          <p><a href="#" class="btn btn-primary" role="button">View Lunch Menu</a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-6" class="main_menu_container">
+      <div class="thumbnail">
+        <img src="http://www.agweb.com/assets/1/19/bt_flat_iron_steak_beef.jpg?1627663" alt="...">
+        <div class="caption">
+          <h3 class="Railway">Dinner Menu</h3>
+          <hr />
+          <p>  Ko serves a tasting menu based largely on market availability. Our lunch menu is currently served Friday through Sunday. Our dinner menu is served Tuesday through Saturday. Both menus are $195 per person, and we will make accommodations for food allergies with prior notice.
+            Please allow at least two and a half hours for your meal.</p>
+            <hr />
+          <p><a href="#" class="btn btn-primary" role="button">View Dinner Menu</a></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
 </div>
