--- a/js/app/modules/main/templates/footer.html
+++ b/js/app/modules/main/templates/footer.html
@@ -1,8 +1,6 @@
-<div class="container">
+<div id="footer">
   <div class="contents">
-    <div class="footer-left">
       <div class="logo-copyright">
-        <div class="footer-logo"><a href="http://www.pb.com"></a></div>
         <div class="copyright">&copy; {{footer.date.year}} Michael Djurdjevic</div>
       </div>
     </div>
