--- a/js/app/modules/menu/assets/_menu.css
+++ b/js/app/modules/menu/assets/_menu.css
@@ -1,5 +1,18 @@
 div#menu_wrapper {
-  padding-top: 2%;
+  padding-top: 4em;
+}
+
+div.thumbnail {
+  border: 2px solid black !important;
+  padding: 1.5em;
+
+  -webkit-box-shadow: -1px 6px 50px 1px rgba(0,0,0,0.91);
+  -moz-box-shadow: -1px 6px 50px 1px rgba(0,0,0,0.91);
+  box-shadow: -1px 6px 50px 1px rgba(0,0,0,0.91);
+}
+
+div.thumbnail img {
+  border: 1px solid black;
 }
 
 
