--- a/js/app/modules/menu/templates/menu.html
+++ b/js/app/modules/menu/templates/menu.html
@@ -8,8 +8,8 @@
         <div class="caption">
           <h3 class="Railway">Lunch Menu</h3>
           <hr />
-          <p> Check out what's for lunch today at DJ's! From juicy burgers to light, summer-perfect salads, we've got whatever you're craving.
-            Our lunch menu is currently served Friday through Sunday, from 11am through 6pm. We will make accommodations for food allergies with prior notice.
+          <p> Check out what's for lunch today! From juicy burgers to light, summer-perfect salads, DJ's has whatever you're craving.
+            Our lunch menu is currently served on weekdays, until 6pm. We will make accommodations for food allergies with prior notice.
             Feel free to dine in, or create an order for takeout!</p>
           <hr />
           <p><a href="#" class="btn btn-primary" role="button">View Lunch Menu</a></p>
@@ -23,8 +23,10 @@
         <div class="caption">
           <h3 class="Railway">Dinner Menu</h3>
           <hr />
-          <p>  Ko serves a tasting menu based largely on market availability. Our lunch menu is currently served Friday through Sunday. Our dinner menu is served Tuesday through Saturday. Both menus are $195 per person, and we will make accommodations for food allergies with prior notice.
-            Please allow at least two and a half hours for your meal.</p>
+          <p>Take a break from cooking tonight - enjoy a beautiful dinner at DJ's! We offer an array of mouth-watering appetizers, with discounts for
+            kids. We also have an all-you-can-eat salad bar, stocked with fresh local produce. After you've had your meal,
+            check out our signature tiramisu!
+          </p>
             <hr />
           <p><a href="#" class="btn btn-primary" role="button">View Dinner Menu</a></p>
         </div>
