Modal popup is now working

--- a/js/app/modules/menu/templates/menu.html
+++ b/js/app/modules/menu/templates/menu.html
@@ -6,13 +6,13 @@
       <div class="thumbnail">
         <img src="https://www.99restaurants.com/media/1837/ninety-nine-restaurant-smokehouse-burger-640.jpg" alt="...">
         <div class="caption">
-          <h3 class="Railway">Lunch Menu</h3>
+          <h3 class="Railway">Lunch Menu (10am - 6pm)</h3>
           <hr />
           <p> Check out what's for lunch today! From juicy burgers to light, summer-perfect salads, DJ's has whatever you're craving.
             Our lunch menu is currently served on weekdays, until 6pm. We will make accommodations for food allergies with prior notice.
             Feel free to dine in, or create an order for takeout!</p>
           <hr />
-          <p><a href="#" class="btn btn-primary" role="button">View Lunch Menu</a></p>
+          <p><a class="btn btn-primary" role="button" ng-click="menu.open(item)">View Lunch Menu</a></p>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
       <div class="thumbnail">
         <img src="http://www.agweb.com/assets/1/19/bt_flat_iron_steak_beef.jpg?1627663" alt="...">
         <div class="caption">
-          <h3 class="Railway">Dinner Menu</h3>
+          <h3 class="Railway">Dinner Menu (6pm - 10pm)</h3>
           <hr />
           <p>Take a break from cooking tonight - enjoy a beautiful dinner at DJ's! We offer an array of mouth-watering appetizers, with discounts for
             kids. We also have an all-you-can-eat salad bar, stocked with fresh local produce. After you've had your meal,
