--- a/js/app/modules/menu/templates/menu.html
+++ b/js/app/modules/menu/templates/menu.html
@@ -12,7 +12,7 @@
             Our lunch menu is currently served on weekdays, until 6pm. We will make accommodations for food allergies with prior notice.
             Feel free to dine in, or create an order for takeout!</p>
           <hr />
-          <p><a class="btn btn-primary" role="button" ng-click="menu.open(item)">View Lunch Menu</a></p>
+          <p><a class="btn btn-primary" role="button" ng-click="menu.open_lunch()">View Lunch Menu</a></p>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
             check out our signature tiramisu!
           </p>
             <hr />
-          <p><a href="#" class="btn btn-primary" role="button">View Dinner Menu</a></p>
+          <p><a class="btn btn-primary" role="button" ng-click="menu.open_lunch()">View Dinner Menu</a></p>
         </div>
       </div>
     </div>
