--- a/js/app/modules/menu/templates/menu.html
+++ b/js/app/modules/menu/templates/menu.html
@@ -12,7 +12,7 @@
             Our lunch menu is currently served on weekdays, until 6pm. We will make accommodations for food allergies with prior notice.
             Feel free to dine in, or create an order for takeout!</p>
           <hr />
-          <p><a class="btn btn-primary" role="button" ng-click="menu.open_lunch()">View Lunch Menu</a></p>
+          <p><a class="btn btn-primary" role="button" ng-click="menu.open_lunch({name: 'Lunch Menu'})">View Lunch Menu</a></p>
         </div>
       </div>
     </div>
