--- a/js/app/modules/menu/templates/dinner_modal.html
+++ b/js/app/modules/menu/templates/dinner_modal.html
@@ -8,7 +8,7 @@
 <div class="modal-body">
 
     <div class="row">
-      <div class="col-md-4" ng-repeat="item in modal.lunch_data">
+      <div class="col-md-4 menu-card" ng-repeat="item in modal.dinner_data">
 
         <div class="card card-default category-widget">
           <div class="card-body category-widget-icon">
@@ -24,4 +24,5 @@
 
       </div>
   </div>
+
 </div>
